Cleaning of files and addition of features
Added titles to the graphs. cleaned up the code.

--- a/covid19-webapp visaualizer/templates/index.html
+++ b/covid19-webapp visaualizer/templates/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Plots of COVID-19 stats in Alberta</h1>
+        <h1>Status of COVID-19 in Alberta</h1>
         <p> 
         {{ plot1|safe }} 
         </p>
